# TaskManager

./: .gitignore
backend/: pyproject.toml
